--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "> 5%"
   ],
   "dependencies": {
+    "@openzeppelin/contracts": "^4.9.1",
+    "dotenv": "^16.1.4",
     "ethers": "^5.7.2",
     "react": "^18.2.0"
   }
